<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    tools:context=".EditActivity">

    <!-- HEADER màu xanh -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?attr/colorPrimary"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Change_Profile"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- NỘI DUNG CHÍNH -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="20dp">

            <!-- Thẻ trắng chứa thông tin -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                android:elevation="2dp"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"
                android:clipToOutline="true"
                android:background="@drawable/profile_card_bg">

                <!-- Avatar -->
                <FrameLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center">

                    <!-- Nền viền -->
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/avatar_border" />

                    <!-- Ảnh avatar -->
                    <ImageView
                        android:id="@+id/imgAvatar"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_gravity="center"
                        android:src="@drawable/dudeptrai"
                        android:scaleType="centerCrop"
                        android:background="@drawable/avatar_circle"
                        android:clipToOutline="true"/>
                    <!--                API level 31 tro len-->
                </FrameLayout>

                <TextView
                    android:id="@+id/tvChangeAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Change_Avatar"
                    android:textColor="#1A237E"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp" />

                <!-- Name -->
                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Full_name"
                    android:inputType="textPersonName"
                    android:background="@drawable/change_profile_field"
                    android:backgroundTint="@null"
                    android:padding="12dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="30dp"/>

                <!-- Email -->
                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/change_profile_field"
                    android:padding="12dp"
                    android:layout_marginBottom="25dp"/>

                <!-- Nút lưu -->
                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Save"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif-medium"
                    android:background="@drawable/btn_primary"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:elevation="4dp"
                    android:padding="14dp"/>

            </LinearLayout>
        </LinearLayout>


    <!-- FOOTER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer"
            android:textColor="@android:color/white"
            android:textSize="13sp"/>
    </LinearLayout>
</LinearLayout>
