<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface">

        <!-- Thanh đầu -->

    <!-- Thông tin người dùng -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="?attr/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/profile"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/profile_card_bg"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="-60dp"
            android:paddingVertical="24dp"
            android:elevation="6dp">

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center">

                <!-- Nền viền -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/avatar_border" />

                <!-- Ảnh avatar -->
                <ImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/dudeptrai"
                    android:scaleType="centerCrop"
                    android:background="@drawable/avatar_circle"
                    android:clipToOutline="true"/>
<!--                API level 31 tro len-->
            </FrameLayout>


            <TextView
                android:id="@+id/tvName"
                android:text="Trần Đình Khánh Dư"
                android:textColor="@color/primaryColor"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tvEmail"
                android:text="dudeptrai2005@gmail.com"
                android:textColor="@color/primaryColor"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!-- Mục Settings -->
        <TextView
            android:text="@string/setting"
            android:textStyle="bold"
            android:textColor="#555555"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <include
            layout="@layout/item_setting" android:id="@+id/dark_mode" />
        <include layout="@layout/item_setting" android:id="@+id/language" />
        <include layout="@layout/item_setting" android:id="@+id/change" />

        <View
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            android:background="@drawable/footer_bg">

            <TextView
                android:id="@+id/tvFooter"
                android:text="@string/footer"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:fontFamily="sans-serif-medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>




