<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    tools:context=".ThemeActivity">

    <!-- HEADER màu xanh -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="?attr/colorPrimary"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Language"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:padding="15dp"
            android:background="@drawable/outline_card"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:focusable="true"
            android:descendantFocusability="blocksDescendants">

            <ImageView
                android:src="@drawable/usa"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:text="@string/English"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:textColor="?attr/colorOnBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primaryColor"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:padding="15dp"
            android:background="@drawable/outline_card"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:focusable="true"
            android:descendantFocusability="blocksDescendants">

            <ImageView
                android:src="@drawable/vn"
                android:layout_width="24dp"
                android:layout_height="24dp" />

            <TextView
                android:text="@string/Vietnamese"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:textColor="?attr/colorOnBackground"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/vi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primaryColor"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </LinearLayout>


    </RadioGroup>

    <LinearLayout
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/colorSurface">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp" />

    </LinearLayout>

    <!-- FOOTER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Được tạo bởi @dutran và @dang"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>
